# student_showcase

./: README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/.sqlx/: query-033a48f9ead341104a373e78001dad19dc6b631ea0186914463d9d44991d1448.json  query-08e03da5c79281c4c31b273564f51c2187a66e3104ca5949bf824a0d62995c16.json  query-0e0a932ce568f00c1c1a52e81fe17fafdbaa530134c8c346b29d3d5fb07ba315.json  query-119689533dd8e97852d8508b1404af572e10ed061e35874bc3adfb69bed99c67.json  query-13957217f4d21faacabd258898ca4899bc3b3c791f0fba6a407aa0a88aa84073.json  query-17607cff9af66c51e07e5c63721f2736fbb45c22e856a99e71dad5e7100c8e3a.json  query-17dd94d337ef9cc2a1563751a4de759154188cbba0e9b04ab3d074ca4fc810e7.json  query-1b2c7cf8379fa4cf6f337b9ca2773bbd1d5ae7f7519e4aad26555d590ad03915.json  query-2035aecf96167bb7670e494b6990d9e5aab887eb049bbf9df6796dad0076017b.json  query-2acd07ddf16f6d734a04b2a6e5493b6a5ea16abf7d40230d6773382b3a637e00.json  query-2c58f65d4cd3d96ba5ae13d21cf0db8a2e27da36cdebdf9596611448112bf8a8.json  query-2dcf63aff749cd0e01c3e87584edddc355b05aa19bc93312d1942da98d2ec9ba.json  query-30645d8144925d6491deb2d5a6516e68d2a3b6020d9a4d2575ac7013ebdf2625.json  query-32516d6609ac8880a98826fb17c43f3ee4496337cf81ac868813b63d8dff154c.json  query-33ddc4a652bf05eca4cfe9e8fd43a8a6155cd65b1482a52ca8663464d7178f80.json  query-363a089cbf64946186a2f9b4fad870cac5097685214e4eca5e83aaf64c0b4877.json  query-39fd5b028799e73889b32546b659df1916b9c6b3d687080c1cdbbf340dc33a64.json  query-3c96d17ddd2827685860342534b1ce7e56fdb30ac398f8b81c8edc080345f25c.json  query-4038ef7b6a70f5e070549cfe377f0cfbd673009c0ab2dad3eb60efef607d9743.json  query-41f5064a69f10f3c8fb870deb77bca36ba06e844c2ad173d3b6e9ae279f66510.json  query-4553d9fccfdec635f4d413c8ab1bd71ec8c26312d95eb0efbab6442efbff28af.json  (+74 more)
(+153 files in other folders)
