[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
argon2 = "0.5.1"
async-trait = "0.1.72"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
openssl-probe = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
  "tls-native-tls",
  "runtime-async-std",
  "postgres",
  "chrono",
  "uuid",
] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
