[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-multipart = "0.7.2"
argon2 = "0.5.1"
async-trait = "0.1.72"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
openssl-probe = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
  "tls-native-tls",
  "runtime-async-std",
  "postgres",
  "chrono",
  "uuid",
] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tera = "1.20.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "fs"] }
fastembed = "5.11.0"
image = "0.25.9"
moka = { version = "0.12.13", features = ["future"] }
[dev-dependencies]
mockall = "0.14"
